src/main/java/com/lang/blang/config/antlr4/BlangParser.java
// Generated from Blang.g4 by ANTLR 4.3

    package com.lang.blang.config.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__6=1, T__5=2, T__4=3, T__3=4, T__2=5, T__1=6, T__0=7, Conjunctions=8, 
		CurrentYear=9, CurrentTime=10, CurrentDate=11, Println=12, Print=13, Input=14, 
		Assert=15, Size=16, Def=17, If=18, Else=19, Return=20, For=21, While=22, 
		To=23, Do=24, End=25, In=26, Notin=27, Null=28, Each=29, As=30, Or=31, 
		And=32, Equals=33, NEquals=34, GTEquals=35, LTEquals=36, Pow=37, Excl=38, 
		GT=39, LT=40, Add=41, Subtract=42, Multiply=43, Divide=44, Modulus=45, 
		OBrace=46, CBrace=47, OBracket=48, CBracket=49, OParen=50, CParen=51, 
		SColon=52, Assign=53, Comma=54, QMark=55, Colon=56, Get=57, From=58, Of=59, 
		Where=60, Between=61, Last=62, First=63, Years=64, Relations=65, Set=66, 
		Noun=67, Create=68, Composite=69, Calculate=70, RoundOf=71, ReplaceNull=72, 
		ReplaceNullOrEmpty=73, StartsWith=74, Like=75, EndsWith=76, Select=77, 
		Sum=78, Avg=79, Copyof=80, By=81, Abs=82, NotLike=83, Next=84, Bool=85, 
		Number=86, Since=87, Identifier=88, String=89, StringLines=90, Comment=91, 
		Space=92;
	public static final String[] tokenNames = {
		"<INVALID>", "'||'", "'by desc('", "'&&'", "'.'", "'->'", "'by asc('", 
		"').'", "Conjunctions", "'current year'", "'current time'", "'current date'", 
		"'println'", "'print'", "'input'", "'assert'", "'size'", "'def'", "'if'", 
		"'else'", "'return'", "'for'", "'while'", "'to'", "'do'", "'end'", "'in'", 
		"'not in'", "'null'", "'each'", "'as'", "Or", "And", "'=='", "'!='", "'>='", 
		"'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", "'?'", 
		"':'", "Get", "'from'", "'of'", "'where'", "'between'", "'last'", "'first'", 
		"Years", "Relations", "'set'", "'noun'", "'create'", "'composite'", "'calculate'", 
		"'roundof'", "'replacenull'", "'replacenullorempty'", "'starts with'", 
		"'like'", "'ends with'", "'select'", "'sum'", "'avg'", "'copyof'", "'by'", 
		"'abs'", "'not like'", "'next'", "Bool", "Number", "Since", "Identifier", 
		"String", "StringLines", "Comment", "Space"
	};
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_functionCall = 4, RULE_ifStatement = 5, RULE_ifStat = 6, RULE_elseIfStat = 7, 
		RULE_elseStat = 8, RULE_functionDecl = 9, RULE_forStatement = 10, RULE_forEachStatement = 11, 
		RULE_whileStatement = 12, RULE_verbStatement = 13, RULE_selectStatement = 14, 
		RULE_ds = 15, RULE_nouns = 16, RULE_nounorfunction = 17, RULE_filters = 18, 
		RULE_orderby = 19, RULE_criteriaexpr = 20, RULE_relationStatement = 21, 
		RULE_relationStat = 22, RULE_relationClause = 23, RULE_setNounStatement = 24, 
		RULE_fetchStatement = 25, RULE_calculateStatement = 26, RULE_compositeStatement = 27, 
		RULE_dsBlock = 28, RULE_filterCriteria = 29, RULE_criteria = 30, RULE_time_period = 31, 
		RULE_prepositions = 32, RULE_nounList = 33, RULE_idList = 34, RULE_exprList = 35, 
		RULE_expression = 36, RULE_list = 37, RULE_aggregateFunctionCall = 38, 
		RULE_indexes = 39, RULE_dateExpression = 40;
	public static final String[] ruleNames = {
		"parse", "block", "statement", "assignment", "functionCall", "ifStatement", 
		"ifStat", "elseIfStat", "elseStat", "functionDecl", "forStatement", "forEachStatement", 
		"whileStatement", "verbStatement", "selectStatement", "ds", "nouns", "nounorfunction", 
		"filters", "orderby", "criteriaexpr", "relationStatement", "relationStat", 
		"relationClause", "setNounStatement", "fetchStatement", "calculateStatement", 
		"compositeStatement", "dsBlock", "filterCriteria", "criteria", "time_period", 
		"prepositions", "nounList", "idList", "exprList", "expression", "list", 
		"aggregateFunctionCall", "indexes", "dateExpression"
	};

	@Override
	public String getGrammarFileName() { return "Blang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BlangParser.EOF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); block();
			setState(83); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode Return() { return getToken(BlangParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Println) | (1L << Print) | (1L << Assert) | (1L << Size) | (1L << Def) | (1L << If) | (1L << For) | (1L << While) | (1L << Get))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (Relations - 65)) | (1L << (Set - 65)) | (1L << (Create - 65)) | (1L << (Calculate - 65)) | (1L << (RoundOf - 65)) | (1L << (ReplaceNull - 65)) | (1L << (ReplaceNullOrEmpty - 65)) | (1L << (Select - 65)) | (1L << (Sum - 65)) | (1L << (Avg - 65)) | (1L << (Abs - 65)) | (1L << (Identifier - 65)) | (1L << (String - 65)))) != 0)) {
				{
				setState(87);
				switch (_input.LA(1)) {
				case Println:
				case Print:
				case Assert:
				case Size:
				case If:
				case For:
				case While:
				case Get:
				case Relations:
				case Set:
				case Create:
				case Calculate:
				case RoundOf:
				case ReplaceNull:
				case ReplaceNullOrEmpty:
				case Select:
				case Sum:
				case Avg:
				case Abs:
				case Identifier:
				case String:
					{
					setState(85); statement();
					}
					break;
				case Def:
					{
					setState(86); functionDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			_la = _input.LA(1);
			if (_la==Return) {
				{
				setState(92); match(Return);
				setState(93); expression(0);
				setState(94); match(SColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public SetNounStatementContext setNounStatement() {
			return getRuleContext(SetNounStatementContext.class,0);
		}
		public RelationStatementContext relationStatement() {
			return getRuleContext(RelationStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public CompositeStatementContext compositeStatement() {
			return getRuleContext(CompositeStatementContext.class,0);
		}
		public ForEachStatementContext forEachStatement() {
			return getRuleContext(ForEachStatementContext.class,0);
		}
		public VerbStatementContext verbStatement() {
			return getRuleContext(VerbStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(116);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); assignment();
				setState(99); match(SColon);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); functionCall();
				setState(102); match(SColon);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104); ifStatement();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105); forStatement();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106); forEachStatement();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(107); whileStatement();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(108); verbStatement();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(109); relationStatement();
				setState(110); match(SColon);
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(112); setNounStatement();
				setState(113); match(SColon);
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(115); compositeStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TableStringPropertyAssignmentContext extends AssignmentContext {
		public TerminalNode String() { return getToken(BlangParser.String, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TableStringPropertyAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterTableStringPropertyAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitTableStringPropertyAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitTableStringPropertyAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TablePropertyStringAssignmentContext extends AssignmentContext {
		public TerminalNode Identifier() { return getToken(BlangParser.Identifier, 0); }
		public TerminalNode String() { return getToken(BlangParser.String, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TablePropertyStringAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterTablePropertyStringAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitTablePropertyStringAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitTablePropertyStringAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TablePropertyAssignmentContext extends AssignmentContext {
		public List<TerminalNode> Identifier() { return getTokens(BlangParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(BlangParser.Identifier, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TablePropertyAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterTablePropertyAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitTablePropertyAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitTablePropertyAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarAndArrayAssignmentContext extends AssignmentContext {
		public IndexesContext indexes() {
			return getRuleContext(IndexesContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(BlangParser.Identifier, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarAndArrayAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).enterVarAndArrayAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlangListener ) ((BlangListener)listener).exitVarAndArrayAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlangVisitor ) return ((BlangVisitor<? extends T>)visitor).visitVarAndArrayAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			setState(142);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new VarAndArrayAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118); match(Identifier);
				setState(120);
				_la = _input.LA(1);
				if (_la==OBracket) {
					{
					setState(119); indexes();
					}
				}

				setState(122); match(Assign);
				setState(123); expression(0);
				}
				break;

			case 2:
				_localctx = new TablePropertyAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(124); match(Identifier);
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(125); match(T__3);
					setState(126); match(Identifier);
					}
					}
					setState(129); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 );
				setState(131); match(Assign);
				setState(132); expression(0);
				}
				break;

			case 3:
				_localctx = new TablePropertyStringAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(133); match(Identifier);
				{
				setState(134); match(T__3);
				setState(135); match(String);
				}
				setState(137); match(Assign);
				setState(138); expression(0);
				}
				break;

			case 4:
				_localctx = new TableStringPropertyAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(139); match(String);
				setState(140); match(Assign);
				setState(141); expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
